# aiguk-meter

./: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/display/: lvgl_wrapper.c  weather_ui.cpp  weather_ui.hpp
main/hal/: bme680.cpp  bme680.hpp  lhs154kc.c  mhz19e.cpp  mhz19e.hpp
main/hal/bme68x/: bme68x.c
